--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,12 +13,14 @@
     "sourceMap": true,
     "baseUrl": ".",
     "types": [
-      "webpack-env"
+      "webpack-env",
+      "element-plus/global"
     ],
     "paths": {
       "@/*": [
         "src/*"
-      ]
+      ],
+      "*.ts": ["*"]
     },
     "lib": [
       "esnext",
