--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "jesgosupport",
   "version": "0.1.0",
   "private": true,
+  "description": "JSONからCSVへの変換ルール設計ユーティリティ",
+  "author": {
+    "name": "Yasuhiro Yamamoto",
+    "email": "mohyama@mohnet.com"
+  },
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -9,9 +14,17 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "element-plus": "^2.3.3",
+    "json-path": "^0.1.3",
+    "json-pointer": "^0.6.2",
+    "jsonpath-plus": "^7.2.0",
+    "splitpanes": "^3.1.5",
+    "vue": "^3.2.13",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
+    "@types/json-pointer": "^1.0.31",
+    "@types/splitpanes": "^2.2.1",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@vue/cli-plugin-babel": "~5.0.0",
