--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "json-path": "^0.1.3",
     "json-pointer": "^0.6.2",
     "jsonpath-plus": "^7.2.0",
+    "papaparse": "^5.4.1",
     "splitpanes": "^3.1.5",
     "vue": "^3.2.13",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@types/json-pointer": "^1.0.31",
+    "@types/papaparse": "^5.3.7",
     "@types/splitpanes": "^2.2.1",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
