--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "jesgosupport",
   "version": "0.3.1",
   "private": true,
-  "description": "JESGO向けJSONからCSVへの変換ルール設計ユーティリティ",
+  "description": "JESGO向けJSONからCSVへの変換ルール設計ユーティリティとJESGOプラグイン",
   "author": {
     "name": "Yasuhiro Yamamoto",
     "email": "mohyama@mohnet.com"
@@ -10,7 +10,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "build-plugin": "webpack --config jesgo-plugin/webpack.config.js"
   },
   "dependencies": {
     "core-js": "^3.8.3",
@@ -40,6 +41,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-vue": "^8.0.3",
-    "typescript": "~4.5.5"
+    "typescript": "~4.5.5",
+    "webpack-cli": "^5.1.4"
   }
 }
