--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-vue": "^8.0.3",
+    "html-loader": "^4.2.0",
     "typescript": "~4.5.5",
     "webpack-cli": "^5.1.4"
   }
