--- a/jesgo-plugin/tsconfig.json
+++ b/jesgo-plugin/tsconfig.json
@@ -4,6 +4,7 @@
         "target": "ES2017",
         "module": "CommonJS",
         "esModuleInterop": true,
-        "strict": true
+        "strict": true,
+        "resolveJsonModule": true
     }
 }
