--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jesgosupport",
-  "version": "0.3.1",
+  "version": "0.3.2",
   "private": true,
   "description": "JESGO向けJSONからCSVへの変換ルール設計ユーティリティとJESGOプラグイン",
   "author": {
@@ -41,7 +41,10 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-vue": "^8.0.3",
+    "file-loader": "^6.2.0",
     "html-loader": "^4.2.0",
+    "json-loader": "^0.5.7",
+    "raw-loader": "^4.0.2",
     "typescript": "~4.5.5",
     "webpack-cli": "^5.1.4"
   }
