--- a/package.json
+++ b/package.json
@@ -28,24 +28,24 @@
     "@types/json-pointer": "^1.0.31",
     "@types/papaparse": "^5.3.7",
     "@types/splitpanes": "^2.2.1",
-    "@typescript-eslint/eslint-plugin": "^5.4.0",
-    "@typescript-eslint/parser": "^5.4.0",
+    "@typescript-eslint/eslint-plugin": "6.9.1",
+    "@typescript-eslint/parser": "6.9.1",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-typescript": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
-    "@vue/eslint-config-standard": "^6.1.0",
-    "@vue/eslint-config-typescript": "^9.1.0",
-    "eslint": "^7.32.0",
+    "@vue/eslint-config-standard": "8.0.1",
+    "@vue/eslint-config-typescript": "12.0.0",
+    "eslint": "8.53.0",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.1.0",
-    "eslint-plugin-vue": "^8.0.3",
+    "eslint-plugin-promise": "6.1.1",
+    "eslint-plugin-vue": "9.18.1",
     "file-loader": "^6.2.0",
     "html-loader": "^4.2.0",
     "json-loader": "^0.5.7",
     "raw-loader": "^4.0.2",
-    "typescript": "~4.5.5",
+    "typescript": "5.2.2",
     "webpack-cli": "^5.1.4"
   }
 }
