--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jesgosupport",
-  "version": "0.3.3",
+  "version": "0.9.0",
   "private": true,
   "description": "JESGO向けJSONからCSVへの変換ルール設計ユーティリティとJESGOプラグイン",
   "author": {
@@ -9,8 +9,8 @@
   },
   "license": "MIT",
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build --mode development",
+    "serve": "vue-cli-service serve --mode \"development\"",
+    "build": "vue-cli-service build --mode \"development\"",
     "build-production": "vue-cli-service build",
     "build-production-fix": "vue-cli-service build --fix",
     "lint": "vue-cli-service lint",
@@ -18,7 +18,8 @@
     "build-plugin-production": "webpack --config jesgo-plugin/webpack.config.js --mode=production"
   },
   "dependencies": {
-    "core-js": "^3.8.3",
+    "core-js": "^3.34.0",
+    "corejs": "^1.0.0",
     "element-plus": "^2.3.3",
     "json-path": "^0.1.3",
     "json-pointer": "^0.6.2",
@@ -32,8 +33,8 @@
     "@types/json-pointer": "^1.0.31",
     "@types/papaparse": "^5.3.7",
     "@types/splitpanes": "^2.2.1",
-    "@typescript-eslint/eslint-plugin": "6.13.1",
-    "@typescript-eslint/parser": "6.13.1",
+    "@typescript-eslint/eslint-plugin": "6.13.2",
+    "@typescript-eslint/parser": "6.13.2",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-typescript": "~5.0.0",
@@ -49,7 +50,7 @@
     "html-loader": "^4.2.0",
     "json-loader": "^0.5.7",
     "raw-loader": "^4.0.2",
-    "typescript": "5.3.2",
+    "typescript": "5.3.3",
     "webpack-cli": "^5.1.4"
   }
 }
