--- a/package.json
+++ b/package.json
@@ -9,11 +9,9 @@
   },
   "license": "MIT",
   "scripts": {
-    "serve": "vue-cli-service serve --mode \"development\"",
-    "build": "vue-cli-service build --mode \"development\"",
-    "build-production": "vue-cli-service build",
-    "build-production-fix": "vue-cli-service build --fix",
-    "lint": "vue-cli-service lint",
+    "serve": "vite",
+    "build": "vite build",
+    "lint": "eslint --fix 'src/*.{js, ts, vue}' &&  eslint --fix 'src/**/*.{js, ts, vue}'",
     "build-plugin": "webpack --config jesgo-plugin/webpack.config.js",
     "build-plugin-production": "webpack --config jesgo-plugin/webpack.config.js --mode=production"
   },
@@ -35,10 +33,7 @@
     "@types/splitpanes": "^2.2.1",
     "@typescript-eslint/eslint-plugin": "6.13.2",
     "@typescript-eslint/parser": "6.13.2",
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-plugin-typescript": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
+    "@vitejs/plugin-vue": "^4.5.2",
     "@vue/eslint-config-standard": "8.0.1",
     "@vue/eslint-config-typescript": "12.0.0",
     "eslint": "8.55.0",
@@ -51,6 +46,7 @@
     "json-loader": "^0.5.7",
     "raw-loader": "^4.0.2",
     "typescript": "5.3.3",
+    "vite": "^5.0.8",
     "webpack-cli": "^5.1.4"
   }
 }
