--- a/package.json
+++ b/package.json
@@ -45,8 +45,10 @@
     "html-loader": "^4.2.0",
     "json-loader": "^0.5.7",
     "raw-loader": "^4.0.2",
+    "ts-loader": "^9.5.1",
     "typescript": "5.4.5",
     "vite": "^5.0.8",
+    "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4"
   }
 }
