--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "build-plugin-production": "webpack --config jesgo-plugin/webpack.config.js --mode=production"
   },
   "dependencies": {
+    "@types/encoding-japanese": "^2.0.5",
     "core-js": "^3.34.0",
     "corejs": "^1.0.0",
     "element-plus": "^2.3.3",
+    "encoding-japanese": "^2.2.0",
     "json-path": "^0.1.3",
     "json-pointer": "^0.6.2",
     "jsonpath-plus": "^7.2.0",
