vite updateに伴う変更

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "email": "mohyama@mohnet.com"
   },
   "license": "MIT",
+  "type": "module",
   "scripts": {
     "serve": "vite",
     "build": "vite build",
