--- a/package.json
+++ b/package.json
@@ -34,22 +34,22 @@
     "@types/json-pointer": "^1.0.31",
     "@types/papaparse": "^5.3.7",
     "@types/splitpanes": "^2.2.1",
-    "@typescript-eslint/eslint-plugin": "6.20.0",
-    "@typescript-eslint/parser": "6.20.0",
-    "@vitejs/plugin-vue": "^4.5.2",
+    "@typescript-eslint/eslint-plugin": "8.8.1",
+    "@typescript-eslint/parser": "8.8.1",
+    "@vitejs/plugin-vue": "5.1.4",
     "@vue/eslint-config-standard": "8.0.1",
-    "@vue/eslint-config-typescript": "12.0.0",
-    "eslint": "8.56.0",
+    "@vue/eslint-config-typescript": "14.0.0",
+    "eslint": "9.12.0",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "6.1.1",
-    "eslint-plugin-vue": "9.20.1",
+    "eslint-plugin-promise": "7.1.0",
+    "eslint-plugin-vue": "9.28.0",
     "file-loader": "^6.2.0",
     "html-loader": "^5.0.0",
     "json-loader": "^0.5.7",
     "raw-loader": "^4.0.2",
     "ts-loader": "^9.5.1",
-    "typescript": "5.4.5",
+    "typescript": "5.6.2",
     "vite": "^5.0.8",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4"
