--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "serve": "vite",
     "build": "vite build",
     "lint": "eslint --fix 'src/*.{js, ts, vue}' &&  eslint --fix 'src/**/*.{js, ts, vue}'",
-    "build-plugin": "webpack --config jesgo-plugin/webpack.config.js",
-    "build-plugin-production": "webpack --config jesgo-plugin/webpack.config.js --mode=production"
+    "build-plugin": "webpack --config jesgo-plugin/webpack.config.cjs",
+    "build-plugin-production": "webpack --config jesgo-plugin/webpack.config.cjs --mode=production"
   },
   "dependencies": {
     "@types/encoding-japanese": "^2.0.5",
