--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "ts-loader": "^9.5.1",
     "typescript": "5.6.3",
     "vite": "^5.0.8",
+    "vite-plugin-pwa": "^0.21.1",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4"
   }
